# study-planning-IA

./: .gitignore  Dockerfile  docker-compose.yml  package.json  pyproject.toml
apps/api/: dependencies.py  main.py  pyproject.toml  ruff.toml
apps/api/dependencies/: auth.py  database.py  security.py  subjects.py  users.py
apps/api/routers/: areas.py  auth.py  resources.py  subjects.py  users.py
apps/api/schemas/: resources.py  subjects.py  users.py
apps/api/src/: main.py
apps/frontend/: package-lock.json  package.json
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/adapters/: http-client.ts
apps/frontend/src/components/: Sidebar.tsx
apps/frontend/src/components/cards/: Addcard.tsx  Statcard.tsx  Subjectcard.tsx
apps/frontend/src/components/modals/: AddSubjectModal.tsx  BaseModal.tsx  ConfirmModal.tsx
apps/frontend/src/config/: envs.ts
apps/frontend/src/context/: AuthContext.tsx
apps/frontend/src/hooks/: useAreas.ts  useCreateSubject.ts  useDeleteSubject.ts  useLogin.ts  useSubjects.ts  useUploadFile.ts
apps/frontend/src/models/: Register.ts  User.ts
apps/frontend/src/pages/: HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
apps/frontend/src/routes/: AppRouter.tsx  PrivateRoute.tsx  PublicRoute.tsx  paths.ts
apps/frontend/src/services/: areas.service.ts  auth.service.ts  resources.service.ts  subjects.service.ts
domain/: pyproject.toml
domain/src/app_domain/dtos/: __init__.py  login_user_dto.py
domain/src/app_domain/dtos/input/: create_subject_dto.py  register_user_dto.py
domain/src/app_domain/dtos/output/: login_output.py  subject_response_dto.py  user_response_dto.py
domain/src/app_domain/entities/: area.py  enrollment.py  resource.py  resources.py  subject.py  user.py
domain/src/app_domain/models/: enrollment_status.py  resource_type.py
domain/src/app_domain/ports/input/: register_user_port.py
domain/src/app_domain/ports/output/: password_hasher.py  resource_repository.py  subject_repository.py  token_provider.py
domain/src/app_domain/ports/services/: file_storage.py
domain/src/app_domain/tests/: conftest.py
domain/src/app_domain/tests/factories/: subject_factory.py  user_factory.py
domain/src/app_domain/tests/unit/: test_create_subject.py  test_register_user.py
domain/src/app_domain/use_cases/: create_subject.py  delete_subject.py  get_subjects_by_user.py  login_user.py  register_user.py
domain/src/dtos/: register_user_dto.py
domain/src/entities/: resources.py  subject.py  user.py
domain/src/ports/repositories/: subject_repository.py  user_repository.py
domain/src/ports/services/: password_hasher.py
domain/src/tests/: conftest.py
domain/src/tests/factories/: user_factory.py
domain/src/tests/unit/: register_user_test.py
domain/src/use_cases/: register_user.py
infrastructure/: pyproject.toml  setup_db.py
infrastructure/src/app_infrastructure/: minio_client.py
infrastructure/src/app_infrastructure/database/: config.py  seed.py
infrastructure/src/app_infrastructure/database/adapters/: user_mapper.py
infrastructure/src/app_infrastructure/database/models/: __init__.py  area.py  enrollment.py  resource.py  subject.py  user.py
infrastructure/src/app_infrastructure/repositories/: sqalchemy_subject_repository.py  sqlalchemy_resource_repository.py  sqlalchemy_user_repository.py
infrastructure/src/app_infrastructure/security/: hasher.py  token_provider.py
infrastructure/src/app_infrastructure/services/: bcrypt_hasher.py
infrastructure/src/app_infrastructure/tests/: conftest.py
infrastructure/src/app_infrastructure/tests/factories/: subject_factory.py  user_factory.py
infrastructure/src/app_infrastructure/tests/unit/: test_sqlalchemy_subject_repository.py  test_sqlalchemy_user_repository.py
infrastructure/src/database/: config.py
infrastructure/src/database/models/: resource.py  subject.py  user.py
infrastructure/src/services/: bcrypt_hasher.py
migrations/: env.py
migrations/versions/: a8afaf172550_initial.py
