[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "gersonUb",email = "gersoncabj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "app-domain @ file:///C:/Users/gerso/OneDrive/Escritorio/study-ia/study-planning-IA/domain"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.14.14,<0.15.0)"
]

[tool.poetry]
[tool.poetry.dependencies]
app-domain = {develop = true}
